force-app/main/default/objects/PWChrono_Holiday__c/PWChrono_Holiday__c.object-meta.xml
<CustomObject>
    <label>Holiday</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>