force-app/main/default/objects/PWChrono_Holiday__c/fields/Holiday_List__c.field-meta.xml
<CustomField>
    <fullName>Holiday_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday List</label>
    <referenceTo>PWChrono_Holiday_List__c</referenceTo>
    <relationshipLabel>Holidays</relationshipLabel>
    <relationshipName>PWChrono_Holidays</relationshipName>
    <type>Lookup</type>
</CustomField>