force-app/main/default/objects/PWChrono_Holiday__c/fields/Is_Weekly_Off__c.field-meta.xml
<CustomField>
    <fullName>Is_Weekly_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Weekly Off</label>
    <type>Checkbox</type>
</CustomField>