force-app/main/default/objects/PWChrono_Holiday__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Holiday_Date__c</columns>
    <columns>Holiday_List__c</columns>
    <columns>Description__c</columns>
    <columns>Is_Weekly_Off__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>